Added week 10 to archive

--- a/development.html
+++ b/development.html
@@ -20,23 +20,56 @@
 
 
 	<div class="week_section">
-		<a class="week_link" href="#week9_pagejump"><p class="weeks">WEEK 9</p></a>
-		<a class="week_link" href="#week8_pagejump"><p class="weeks">WEEK 8</p></a>
-		<a class="week_link" href="#week7_pagejump"><p class="weeks">WEEK 7</p></a>
-		<a class="week_link" href="#week6_pagejump"><p class="weeks">WEEK 6</p></a>
-		<a class="week_link" href="#week5_pagejump"><p class="weeks">WEEK 5</p></a>
-		<a class="week_link" href="#week4_pagejump"><p class="weeks">WEEK 4</p></a>
-		<a class="week_link" href="#week3_pagejump"><p class="weeks">WEEK 3</p></a>
-		<a class="week_link" href="#week2_pagejump"><p class="weeks">WEEK 2</p></a>
-		<a class="week_link" href="#week1_pagejump"><p class="weeks">WEEK 1</p></a>
+		<a class="week_link" href="#week10_pagejump"><p class="weeks">Week 10</p></a>
+		<a class="week_link" href="#week9_pagejump"><p class="weeks">Week 9</p></a>
+		<a class="week_link" href="#week8_pagejump"><p class="weeks">Week 8</p></a>
+		<a class="week_link" href="#week7_pagejump"><p class="weeks">Week 7</p></a>
+		<a class="week_link" href="#week6_pagejump"><p class="weeks">Week 6</p></a>
+		<a class="week_link" href="#week5_pagejump"><p class="weeks">Week 5</p></a>
+		<a class="week_link" href="#week4_pagejump"><p class="weeks">Week 4</p></a>
+		<a class="week_link" href="#week3_pagejump"><p class="weeks">Week 3</p></a>
+		<a class="week_link" href="#week2_pagejump"><p class="weeks">Week 2</p></a>
+		<a class="week_link" href="#week1_pagejump"><p class="weeks">Week 1</p></a>
 <!-- 		<a href="development.html"><p class="development highlight">development</p></a>
 		<a><p class="development">about</p></a>
 		<a href="development.html"><p class="development">hello</p></a> -->
 	</div>
 
+
+	<div class="week10">
+
+		<a name="week10_pagejump"><p class="week_number">Week 10</p></a>
+
+	</div>
+
+
+	<div>
+		<p class="description">This week I worked on adding a few updates to my extension, such as making its style more in line with the rest of the design materials of my project. I changed the background color of the text that I append on top of a liked image, and I also wanted to change the font to the same that I am using in the logo and the brochure. However, as the font that I am using for the design materials is a Google Font, I avoided using it for the extension, as it would mean loading an external source which might cause issues for publishing it in the Chrome Web Store, as it requires asking for a permission to use an external source. Therefore, I am using a font that I think is in line with the rest of the design materials and is not a Google Font. I did not change any other design elements of the extension as the rest are in line with Instagram’s aesthetic and I want to make the extension look as authentic as possible. In addition, I also worked on controlling the randomness of my exhibition based on the feedback that I got from the users that I tested it with back in March.</p>
+
+		<div class="documentation_images">
+
+			<img class="week10_images" src="media/images/week10_1.png">
+
+		</div>
+
+		<p class="description">Then it was time to attempt to publish the extension. The process included filling out detailed information regarding the extension’s single purpose, permission justification and distribution. To have it publically available I need to wait for Google's response to my request to publish it. In my request I explained that this is an extension for a bachelor thesis project and won’t be used for commercial purposes, however, I am unsure whether Google will allow to publish it publically. If not, I will try to make the extension available with a link (which would still direct to the Chrome Web Store making the installation process very simple given that I can provide my users with the link). This option would not change my initial vision much, as I would need to provide my users with a link even if the extension is publically available to everyone in the Google Web Store. However, if publishing with a link does not work either, I will post instructions on the site with how to side load the extension. Currently I am still waiting for Google's response which could take up to a week but in the meantime the extension appears in my local Google Web Store.</p>
+
+		<div class="documentation_images">
+
+			<img class="week10_images" src="media/images/week10_2.png">
+			<img class="week10_images2" src="media/images/week10_3.png">
+			<img class="week10_images2" src="media/images/week10_4.png">
+
+		</div>
+
+		<p class="description">Lastly, I finished updating the archive of this site and now it includes updates about all the weeks this semester. I have also started getting the assets that I need to finish the renders of the exhibition space and I keep working on my paper. Once the paper is finished, I will make a documentation section of my project in this site which will also include the renders and a link to the extension itself.</p>
+
+	</div>
+
+
 	<div class="week9">
 
-		<a name="week9_pagejump"><p class="week_number">WEEK 9</p></a>
+		<a name="week9_pagejump"><p class="week_number">Week 9</p></a>
 
 	</div>
 
@@ -62,7 +95,7 @@
 
 	<div class="week8">
 
-		<a name="week8_pagejump"><p class="week_number">WEEK 8</p></a>
+		<a name="week8_pagejump"><p class="week_number">Week 8</p></a>
 
 	</div>
 
@@ -86,7 +119,7 @@
 
 	<div class="week7">
 
-		<a name="week7_pagejump"><p class="week_number">WEEK 7</p></a>
+		<a name="week7_pagejump"><p class="week_number">Week 7</p></a>
 
 	</div>
 
@@ -117,7 +150,7 @@
 
 	<div class="week6">
 
-		<a name="week6_pagejump"><p class="week_number">WEEK 6</p></a>
+		<a name="week6_pagejump"><p class="week_number">Week 6</p></a>
 
 	</div>
 
@@ -145,7 +178,7 @@
 
 	<div class="week5">
 
-		<a name="week5_pagejump"><p class="week_number">WEEK 5</p></a>
+		<a name="week5_pagejump"><p class="week_number">Week 5</p></a>
 
 	</div>
 
@@ -187,7 +220,7 @@
 
 	<div class="week4">
 
-		<a name="week4_pagejump"><p class="week_number">WEEK 4</p></a>
+		<a name="week4_pagejump"><p class="week_number">Week 4</p></a>
 
 	</div>
 
@@ -227,7 +260,7 @@
 
 	<div class="week3">
 
-		<a name="week3_pagejump"><p class="week_number">WEEK 3</p></a>
+		<a name="week3_pagejump"><p class="week_number">Week 3</p></a>
 
 	</div>
 
@@ -264,7 +297,7 @@
 
 	<div class="week2">
 
-		<a name="week2_pagejump"><p class="week_number">WEEK 2</p></a>
+		<a name="week2_pagejump"><p class="week_number">Week 2</p></a>
 
 	</div>
 
@@ -311,7 +344,7 @@
 
 	<div class="week1">
 
-		<a name="week1_pagejump"><p class="week_number">J-TERM + WEEK 1</p></a>
+		<a name="week1_pagejump"><p class="week_number">J-term + Week 1</p></a>
 
 	</div>
 
