Added week 11 to archive

--- a/development.html
+++ b/development.html
@@ -20,6 +20,7 @@
 
 
 	<div class="week_section">
+		<a class="week_link" href="#week11_pagejump"><p class="weeks">Week 11</p></a>
 		<a class="week_link" href="#week10_pagejump"><p class="weeks">Week 10</p></a>
 		<a class="week_link" href="#week9_pagejump"><p class="weeks">Week 9</p></a>
 		<a class="week_link" href="#week8_pagejump"><p class="weeks">Week 8</p></a>
@@ -34,6 +35,33 @@
 		<a><p class="development">about</p></a>
 		<a href="development.html"><p class="development">hello</p></a> -->
 	</div>
+
+
+	<div class="week11">
+
+		<a name="week11_pagejump"><p class="week_number">Week 11</p></a>
+
+	</div>
+
+<div>
+	<p class="description"> This week my main objective was to work on the Capstone paper, as me and my Capstone advisor David Darts had agreed on me sending the first draft by Monday, April 20th, in order to discuss it in our weekly meeting which takes place on Tuesdays. After the discussion and receiving feedback about the first draft I will continue refining the paper until the deadline on May 1st. Besides working on the paper, I also received an approval from Google to publish my extension on the Chrome Web Store, however – only with a link instead of it being available publically. Although not publically available, this does not change anything much in terms of distribution, as I will still be able to effectively share it with users without any side loading. I was actually pleasantly surprised that Google allowed to publish the extension on its Extension store at all.</p>
+
+	<div class="documentation_images">
+
+		<img class="week11_images" src="media/images/week11.png">
+
+	</div>
+
+	<p class="description">In addition to writing the paper and getting the extension published, I also worked on the mock-ups of the exhibition space with the assets that I bought with the revised Capstone budget. I finished two of them – the main overview of the space which includes the back wall and sections of the side walls and another one for the right-side wall. I still need to create a mock-up for the left-side wall and put them all together with a description of the project to create the documentation section of this website.</p>
+
+	<div class="documentation_images">
+
+		<img class="week11_images" src="media/images/ROOM_SETUP_V2.jpg">
+		<img class="week11_images2" src="media/images/ROOM_SETUP_V2_shelf_wall.jpg">
+
+	</div>
+
+
 
 
 	<div class="week10">
