Added week 12 to archive

--- a/development.html
+++ b/development.html
@@ -20,6 +20,7 @@
 
 
 	<div class="week_section">
+		<a class="week_link" href="#week12_pagejump"><p class="weeks">Week 12</p></a>
 		<a class="week_link" href="#week11_pagejump"><p class="weeks">Week 11</p></a>
 		<a class="week_link" href="#week10_pagejump"><p class="weeks">Week 10</p></a>
 		<a class="week_link" href="#week9_pagejump"><p class="weeks">Week 9</p></a>
@@ -37,6 +38,23 @@
 	</div>
 
 
+	<div class="week12">
+
+		<a name="week12_pagejump"><p class="week_number">Week 12</p></a>
+
+	</div>
+
+<div>
+	<p class="description">This week I worked on the documentation section of this site and finishing up the renders of the exhibition space. I have finished the text and the images that I need for documentation, thus the only step left until the submission of the project is putting the documentation up on this website and reviewing the paper one last time. </p>
+
+	<div class="documentation_images">
+
+		<img class="week12_images" src="media/images/week12.jpg">
+
+	</div>
+
+</div>
+
 	<div class="week11">
 
 		<a name="week11_pagejump"><p class="week_number">Week 11</p></a>
@@ -44,7 +62,7 @@
 	</div>
 
 <div>
-	<p class="description"> This week my main objective was to work on the Capstone paper, as me and my Capstone advisor David Darts had agreed on me sending the first draft by Monday, April 20th, in order to discuss it in our weekly meeting which takes place on Tuesdays. After the discussion and receiving feedback about the first draft I will continue refining the paper until the deadline on May 1st. Besides working on the paper, I also received an approval from Google to publish my extension on the Chrome Web Store, however – only with a link instead of it being available publically. Although not publically available, this does not change anything much in terms of distribution, as I will still be able to effectively share it with users without any side loading. I was actually pleasantly surprised that Google allowed to publish the extension on its Extension store at all.</p>
+	<p class="description">This week my main objective was to work on the Capstone paper, as me and my Capstone advisor David Darts had agreed on me sending the first draft by Monday, April 20th, in order to discuss it in our weekly meeting which takes place on Tuesdays. After the discussion and receiving feedback about the first draft I will continue refining the paper until the deadline on May 1st. Besides working on the paper, I also received an approval from Google to publish my extension on the Chrome Web Store, however – only with a link instead of it being available publically. Although not publically available, this does not change anything much in terms of distribution, as I will still be able to effectively share it with users without any side loading. I was actually pleasantly surprised that Google allowed to publish the extension on its Extension store at all.</p>
 
 	<div class="documentation_images">
 
