--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 	<div class="menu_section">
 		<a href="development.html"><p class="home">archive</p></a>
-		<a><p class="home">about</p></a>
-		<a href="development.html"><p class="home">demo</p></a>
+		<a href="documentation.html"><p class="home">documentation</p></a>
+		<a href="demo.html"><p class="home">demo</p></a>
 	</div>
 
 
