Added a demo video

--- a/demo.html
+++ b/demo.html
@@ -21,3 +21,10 @@
 
 
 	<p class="description demo">The extension is available for download <a class="link" href="https://chrome.google.com/webstore/detail/liked/fgfddnbpdccindgicnfbfcijikbaffeg/null" target="_blank">here</a>.</p>
+
+
+		<div class="documentation_videos">
+
+			<iframe src="https://player.vimeo.com/video/413881014" width="1137" height="664.4" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+		</div>
