--- a/documentation.html
+++ b/documentation.html
@@ -19,6 +19,9 @@
 	</div>
 
 
+<a class="week_link" href="documentation.html"><button id="myBtn" title="Go to top">top ↑</button>
+
+
 <div>
 	<p class="description_documentation">Liked is a two-part project addressing anxieties triggered by the use of social media. There is often a pressure to maintain a picture-perfect image on social media platforms, yet getting caught up in the act of scrolling causes the negligence of the actual content. The first part is a Chrome extension which disrupts the usual flow of liking posts on Instagram. After liking a post, the user experiences an atypical response to their action. The response can be one of the following:</p>
 		<p class="description_tab">- A text appears on top of the picture, i.e., ‘Did you really see this picture?’, ‘How many pictures have you already liked?’.
