--- a/documentation.html
+++ b/documentation.html
@@ -19,7 +19,7 @@
 	</div>
 
 
-<a class="week_link" href="documentation.html"><button id="myBtn" title="Go to top">top ↑</button>
+<a class="week_link" href="documentation.html"><button id="myBtn" title="Go to top">top ↑</button></a>
 
 
 <div>
@@ -38,7 +38,11 @@
 		<br>
 		<br>
 		<br>
-		The extension is available for download <a class="link" href="https://chrome.google.com/webstore/detail/liked/fgfddnbpdccindgicnfbfcijikbaffeg/null" target="_blank">here</a>.</p>
+
+		The extension is available for download <a class="link" href="https://chrome.google.com/webstore/detail/liked/fgfddnbpdccindgicnfbfcijikbaffeg/null" target="_blank">here</a>.
+		<br>
+		The code for the extension is available on GitHub <a class="link" href="https://github.com/luizerieksta/liked_extension" target="_blank">here</a>.</p>
+
 
 		<div class="documentation_images">
 
